style(Styles): :bug: icon dark mode fixed

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -25,8 +25,10 @@ $standard-font-Lexend-Deca-sans-serif: 'Lexend Deca', sans-serif;
 $standard-font-Outfit-sans-serif: 'Outfit', sans-serif;
 $standard-font-Urbanis-sans-serif: 'Urbanist', sans-serif;
 
+
 //TODO color palette ( RGB )
 $standard-color-black: rgb(16, 16, 16);
+$standard-container-black: rgba(45, 44, 44, 0.8); //#292a2d
 $standard-color-black-ligth: rgba(20, 20, 20, 0.8);
 $standard-color-beige: #a0937d;
 $standard-color-blue: rgba(20, 33, 66, 1);
