--- a/client/src/styles/components/QuickLook/_quickLook.scss
+++ b/client/src/styles/components/QuickLook/_quickLook.scss
@@ -40,7 +40,6 @@
       0px 1px 18px 0px rgba(0, 0, 0, 0.12);
     padding: 16px;
     width: 50%;
-    height: 40%;
 
     body.dark & {
       background: $standard-color-black;
@@ -156,7 +155,7 @@
             flex-direction: column;
             align-items: center;
             height: 7.5vw;
-            width: 7.5vw;
+            width: auto;
             padding: 20px;
             //background-color: antiquewhite;
             background-color: $standard-color-blue-light;
@@ -184,7 +183,8 @@
             justify-content: center;
             align-items: center;
             width: 5vw;
-            gap: 20px;
+            margin-left: 20px;
+            margin-top: -35px;
           }
 
           .add-car-card-beta {
