fix buttos mui animation

--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -193,7 +193,7 @@
                 padding: 3% 0%;
               }
               .product-rating {
-                width: auto;
+                min-width: 70px;
                 text-align: center;
                 font-size: 4rem;
                 // background-color: $standard-color-red;
