--- a/client/src/styles/components/QuickLook/_quickLook.scss
+++ b/client/src/styles/components/QuickLook/_quickLook.scss
@@ -155,7 +155,8 @@
             flex-direction: column;
             align-items: center;
             height: 7.5vw;
-            width: auto;
+            min-width: 130px;
+            min-height: 120px;
             padding: 20px;
             //background-color: antiquewhite;
             background-color: $standard-color-blue-light;
