--- a/client/src/styles/components/pagination/_pagination.scss
+++ b/client/src/styles/components/pagination/_pagination.scss
@@ -5,7 +5,6 @@
   height: auto;
   width: 100%;
   background-size: contain;
-  
 }
 
 .pagination-container {
@@ -19,7 +18,6 @@
   gap: 10px;
 
   .pagination-button-next {
-
     width: 30px;
     height: 40px;
     border: 1px solid $standard-color-transparent;
@@ -32,10 +30,9 @@
       background-color: $standard-color-transparent;
       scale: 1.1;
     }
-
   }
 
-  .container-buttons-pagination{
+  .container-buttons-pagination {
     padding: 5px 12px;
     display: flex;
     gap: 15px;
@@ -65,10 +62,7 @@
       scale: 1.1;
       background-color: $standard-color-blue-green;
     }
-    
   }
-
- 
 }
 
 .pagination-button:before {
@@ -76,7 +70,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  content: "";
+  content: '';
   top: 0;
   left: 0;
   background-color: #2c3e50;
@@ -92,7 +86,7 @@
   color: aliceblue;
   font-weight: 300;
   font-size: 0.8rem;
-  background-image: url("../../../assets/images/buttons/paginationBtnUnset.png");
+  background-image: url('../../../assets/images/buttons/paginationBtnUnset.png');
 }
 
 // .pagination-button.pagination-newer {
