--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -73,16 +73,48 @@
   .Nav_ThemeDiv {
     //background-color: red;
     border: 1px solid white;
-    border-radius: 100%;
-    width: 30px;
-    height: 30px;
+    border-radius: 20px;
+    width: 50px;
+    height: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 10px;
     cursor: pointer;
-    img {
+    position: relative;
+
+    .Nav_Theme_moon {
+      display: flex;
+      position: absolute;
       width: 20px;
+      height: 20px;
+      border-radius: 100%;
+      margin-left: 5px;
+      left: 0;
+      //background-color: red;
+      transition: all .2s ease-in;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .Nav_theme_sun {
+      display: flex;
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      border-radius: 100%;
+      margin-right: 5px;
+      left: 50%;
+      //background-color: red;
+      transition: all .2s ease-in;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
