--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -3,12 +3,15 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  max-width: 100vw;
+  // margin-top: 30px;
+  // margin-bottom: 30px;
+  // padding: 20px;
 
   .dashboardAdmin_wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     gap: 40px;
@@ -69,14 +72,19 @@
       }
     }
   }
+
   .main_graphics{
-    display: grid;
+    // display: grid;
     // grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    grid-template-rows: 1fr 1fr;
-    width: 96%;
+    // grid-gap: 10px;
+    // grid-template-rows: 1fr 1fr;
+    // max-width: 100vw;
+    width: 100%;
+    min-height: 100vh;
     
     .PieChart, .ComposedChart, .AreaChart{
+      // width: 100%;
+      height: 100vh;
       padding: 9px;
       border: 1px solid lightgray;
       border-radius: 10px;
@@ -86,19 +94,10 @@
 
       display: flex;
       flex-direction: column;
-      // justify-content: space-around;
+      justify-content: space-around;
       align-items: center;
     }
-
-    .primerDiv{
-      display:grid;
-      grid-template-columns: 1fr 3fr;
-      grid-gap: 15px;
-    }
-
-    .segundoDiv{
-      grid-template-rows: 1fr;
-    }
+  
   }
   
 }
