style(Styles): :lipstick: delete overflow scroll in favorites modal in profile

--- a/client/src/styles/components/ModalFavorites/_modalFavorites.scss
+++ b/client/src/styles/components/ModalFavorites/_modalFavorites.scss
@@ -26,7 +26,7 @@
     padding: 40px;
     font-family: $standard-font-Poiret-One;
     z-index: 6;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     body.dark & {
       background-color: rgba(0, 0, 0, 0.8);
