--- a/client/src/styles/components/_carrousel.scss
+++ b/client/src/styles/components/_carrousel.scss
@@ -9,36 +9,48 @@ $card-size: 18rem;
 }
 
 .carousel {
-  position: relative;
+  //position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: $card-size;
   height: 25rem;
-  perspective: 500px;
+  perspective: 350px;
   transform-style: preserve-3d;
+  //background-color: #ec4899;
 
   @media (max-width: 710px) {
     width: 15rem;
     height: 20.5rem;
+
+    //background-color: #ec4899;
     .Carrousel_card-container {
+
       //padding-bottom: 10px;
       .HomeCard_ImageContainer {
         img {
           height: 100px;
         }
       }
+
       .HomeCard_DescriptionContainer {
         font-size: 12px;
       }
+
       .HomeCard_PriceContainer {
         font-size: 10px;
       }
+
       .HomeCard_RatingContainer {
         img {
           width: 15px;
         }
       }
+
       .HomeCard_AddCartButtonContainer {
         .Home_add-car-card-beta {
           height: 30px;
+
           @media (max-width: 420px) {
             font-size: 10px;
             padding: 0;
@@ -53,10 +65,7 @@ $card-size: 18rem;
   position: absolute;
   width: 100%;
   height: 100%;
-  transform: rotateY(calc(var(--offset) * 50deg))
-    scaleY(calc(1 + var(--abs-offset) * -0.4))
-    translateZ(calc(var(--abs-offset) * -30rem))
-    translateX(calc(var(--direction) * -5rem));
+  transform: rotateY(calc(var(--offset) * 50deg)) scaleY(calc(1 + var(--abs-offset) * -0.4)) translateZ(calc(var(--abs-offset) * -30rem)) translateX(calc(var(--direction) * -5rem));
   filter: blur(calc(var(--abs-offset) * 1rem));
   transition: all 0.3s ease-out;
 }
@@ -175,25 +184,76 @@ $card-size: 18rem;
 }
 
 .nav {
-  color: $standard-color-blue;
+  color: $standard-color-transparent;
   font-size: 5rem;
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 8vw;
+  height: 8vw;
   top: 50%;
   z-index: 2;
   cursor: pointer;
   user-select: none;
   background: unset;
   border: unset;
+  transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+  &:hover {
+    scale: 1.05;
+    transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  }
 
   &.left {
     transform: translateX(-100%) translatey(-50%);
+    //background-color: #ec4899;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    right: 8vw;
+
+    @media (max-width: $medium-screen) {
+      right: 18vw;
+      height: 10vw;
+    }
+    
+    @media (max-width: $small-screen) {
+      // background-color: red; //!
+      height: 20vw;
+      right: 32vw;
+    }
+    @media (max-width: $movil-screen) {
+      // background-color: red; //!
+      height: 50vw;
+      right: 80vw;
+    }
   }
 
   &.right {
-    right: 0;
+    //background-color: #ec4899;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    left: 8vw;
     transform: translateX(100%) translatey(-50%);
+
+    @media (max-width: $medium-screen) {
+      left: 18vw;
+      height: 10vw;
+    }
+
+    @media (max-width: $small-screen) {
+      // background-color: red; //!
+      height: 20vw;
+      left: 32vw;
+    }
+
+    @media (max-width: $movil-screen) {
+      // background-color: red; //!
+      height: 50vw;
+      left: 80vw;
+
+    }
   }
 }
