--- a/client/src/styles/components/_newsHome.scss
+++ b/client/src/styles/components/_newsHome.scss
@@ -1,27 +1,95 @@
-.news_fake_container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.news_fake_container {
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: center;
 
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-items: start;
+    width: 60%;
+    padding: 10px;
+    //background-color: aqua;
+    //gap: 5%;
+
+    @media (max-width: $movil-screen) {
+        //background-color: red; //!
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+
+    .news_fake_card {
+        // width: 30%;
+        // height: 150px;
+        // background-color:$standard-color-blue;
+        // border-radius: $standard-border-radius;
+        // margin: 8px;
+
+        display: flex;
+        width: 70%;
+        height: auto;
+        gap: 5%;
+        margin: 2.5% 0%;
+        position: relative;
+        box-shadow: 5px 5px 10px 1px $standard-color-blue-glass-other;
+        cursor: pointer;
+        background-color: transparent;
+
+        transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        border-radius: $standard-border-radius 0px 0px $standard-border-radius ;
+
+        &:hover {
+            scale: 1.1;
+            transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+            p {
+                left: 100%;
+                color: transparent;
+                background-color: transparent;
+                transition: all 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+            }
+        }
+
+
+        @media (max-width: 500px) {
+            width: 45%;
+        }
+
+        @media (max-width: 450px) {
+            width: 95%;
+            height: 100px;
+        }
+
+        img {
+            width: 100%;
+            //height: 100%;
+            border-radius: $standard-border-radius 0px 0px $standard-border-radius ;
+        }
+
+        p {
+            position: absolute;
+            top: 0%;
+            bottom: 0%;
+            left: 30%;
+            right: 0%;
+            font-size: 1.5vw;
+            font-family: $standard-font-Barlow;
+            color: $standard-color-white-background;
+            background-color: $standard-color-blue;
+            opacity: 0.95;
+            padding: 5%;
+
+            display: flex;
+            align-items: center;
+            transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+            
+            @media (max-width: $movil-screen) {
+                //background-color: red; //!
+                font-size: 3vw;
+                
+              
+              }
+        }
+    }
 }
-.news_fake_card{
-    width: 30%;
-    height: 150px;
-    background-color:$standard-color-blue;
-    border-radius: $standard-border-radius;
-    margin: 8px;
-    @media (max-width: 500px) {
-        width: 45%;
-    }
-    @media (max-width: 450px) {
-        width: 95%;
-        height: 200px;
-    }
-
-    img{
-        width: 100%;
-        height: 100%;
-        border-radius: $standard-border-radius;
-    }
-}
-
