--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -92,7 +92,7 @@
       margin-left: 5px;
       left: 0;
       //background-color: red;
-      transition: all .2s ease-in;
+      transition: all 0.2s ease-in;
 
       img {
         width: 100%;
@@ -109,7 +109,7 @@
       margin-right: 5px;
       left: 50%;
       //background-color: red;
-      transition: all .2s ease-in;
+      transition: all 0.2s ease-in;
 
       img {
         width: 100%;
