--- a/client/src/styles/components/news/_news.scss
+++ b/client/src/styles/components/news/_news.scss
@@ -11,114 +11,99 @@
     background: $standard-color-black-ligth;
   }
 
-  .news_container_firstLine {
-    background-color: white;
+  .news_firstLine {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 400px);
+    justify-content: center;
+    align-items: center;
+
     border-radius: 10px;
     padding: 10px;
-    width: 95%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.3);
-    margin-bottom: 10px;
-    body.dark & {
-      background-color: $standard-container-black;
-      align-items: center;
+    width: 100%;
+    height: auto;
+    box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.2);
+    gap: 40px;
+
+    @media (max-width: 400px) {
+      grid-template-columns: repeat(auto-fill, 100%);
     }
 
-    @media (max-width: 710px) {
-      flex-wrap: wrap;
-      background-color: white;
-      width: 100%;
-      height: auto;
-    }
-
-    .news_firstLine_cardRow {
+    .news_cardRow {
       display: flex;
-      width: 70%;
-      height: 100%;
+      height: 200px;
+      align-items: center;
+      justify-content: center;
 
-      @media (max-width: 710px) {
-        width: 800px;
-
-        width: 100%;
-        height: 300px;
-      }
-
-      @media (max-width: 450px) {
-        flex-direction: column;
-        height: auto;
-        align-items: center;
-      }
-      .news_firstLine_firstCard {
-        width: 65%;
-        margin: 5px;
-        position: relative;
-        background-color: rgb(34, 110, 110);
-        cursor: pointer;
-
-        @media (max-width: 710px) {
-          width: 50%;
-        }
-        @media (max-width: 450px) {
-          width: 100%;
-          height: 200px;
-          align-items: center;
-        }
-        img {
-          width: 100%;
-          height: 100%;
-        }
-
-        &:hover {
-          .news_firstLine_Content h1 {
-            color: $standard-color-blue-green;
+      &:hover {
+        .news_card {
+          .news_content {
+            transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+            height: 100%;
+            gap: 10px;
           }
         }
+      }
 
-        .news_firstLine_Content {
+      .news_card {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          max-height: 100%;
+          max-width: 100%;
+          object-fit: contain;
+        }
+
+        .news_content {
           position: absolute;
           width: 100%;
-          height: 90px;
+          height: 60px;
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: flex-start;
           bottom: 0;
           z-index: 2;
-          background-color: rgba(20, 16, 16, 0.603);
+          background-color: rgba(20, 16, 16, 0.8);
+          transition: all 0.2s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+          &:hover {
+            h1 {
+              color: $standard-color-blue-green;
+            }
+          }
 
           h1 {
             margin-left: 10px;
+            font-size: large;
             color: white;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
           }
           p {
+            font-size: mediumS;
             margin-left: 10px;
             color: white;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
           }
         }
       }
 
-      .news_firstLine_secondCard {
+      .news_secondCard {
         width: 35%;
         margin: 5px;
         background-color: rgb(34, 110, 110);
         position: relative;
         align-items: center;
         cursor: pointer;
-        @media (max-width: 710px) {
-          width: 50%;
-        }
-        @media (max-width: 450px) {
-          width: 100%;
-          height: 200px;
-        }
+        
         img {
           width: 100%;
-          height: 100%;
+          height: auto;
         }
 
         &:hover {
@@ -143,139 +128,12 @@
             margin-left: 10px;
             color: white;
             font-size: 18px;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
           }
           p {
             margin-left: 10px;
             color: white;
-            font-family: 'Roboto', sans-serif;
-          }
-        }
-      }
-    }
-
-    .news_firstLine_cardColumn {
-      display: flex;
-      flex-direction: column;
-      width: 30%;
-      height: 100%;
-
-      @media (max-width: 710px) {
-        flex-direction: row;
-
-        height: 300px;
-        width: 100%;
-      }
-      @media (max-width: 450px) {
-        flex-direction: column;
-        width: 100%;
-        height: auto;
-        align-items: center;
-      }
-      .news_firstLine_thridCard {
-        height: 50%;
-        margin: 5px;
-        position: relative;
-        background-color: rgb(34, 110, 110);
-        align-items: center;
-        cursor: pointer;
-        @media (max-width: 710px) {
-          width: 50%;
-          height: 100%;
-          align-items: center;
-        }
-        @media (max-width: 450px) {
-          width: 100%;
-          height: 200px;
-          align-items: center;
-        }
-        img {
-          width: 100%;
-          height: 100%;
-        }
-
-        &:hover {
-          .news_firstLine_Content h1 {
-            color: $standard-color-blue-green;
-          }
-        }
-
-        .news_firstLine_Content {
-          position: absolute;
-          width: 100%;
-          height: 90px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: flex-start;
-          bottom: 0;
-          z-index: 2;
-          background-color: rgba(20, 16, 16, 0.603);
-
-          h1 {
-            margin-left: 10px;
-            color: white;
-            font-size: 18px;
-            font-family: 'Roboto', sans-serif;
-          }
-          p {
-            margin-left: 10px;
-            color: white;
-            font-family: 'Roboto', sans-serif;
-          }
-        }
-      }
-
-      .news_firstLine_fourCard {
-        height: 45%;
-        margin: 5px;
-        position: relative;
-        background-color: rgb(34, 110, 110);
-        cursor: pointer;
-        @media (max-width: 710px) {
-          width: 50%;
-          height: 100%;
-        }
-        @media (max-width: 450px) {
-          width: 100%;
-          height: 200px;
-        }
-        img {
-          width: 100%;
-          height: 100%;
-        }
-
-        &:hover {
-          .news_firstLine_Content h1 {
-            color: $standard-color-blue-green;
-          }
-        }
-
-        .news_firstLine_Content {
-          position: absolute;
-          width: 100%;
-          height: 90px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: flex-start;
-          bottom: 0;
-          z-index: 2;
-          background-color: rgba(20, 16, 16, 0.603);
-
-          h1 {
-            margin-left: 10px;
-            color: white;
-            font-size: 18px;
-            font-family: 'Roboto', sans-serif;
-            &:hover {
-              color: $standard-color-blue-green;
-            }
-          }
-          p {
-            margin-left: 10px;
-            color: white;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
           }
         }
       }
@@ -318,10 +176,4 @@
     color: $standard-color-blue-green;
     border: 1px solid $standard-color-blue;
   }
-}
-
-
-.news_container_loader {
-  width: 20px;
-  height: 20px;
 }
