feat(Components): :construction: custom component for scroll up

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -10,6 +10,7 @@
 @import './components/Footer/footer';
 @import './components/home';
 @import './components/page404/page404';
+@import './components/ScrollUp/scrollUp';
 
 @import './components/carrousel';
 @import './components/newsHome';
