--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -116,7 +116,7 @@
         background-color: $standard-color-blue-light;
         display: flex;
         flex-direction: column;
-        padding: 2%;
+        padding: 10px;
         font-family: $standard-font-Barlow;
         //gap: 20px;
         //background-color: red;
@@ -128,7 +128,6 @@
           color: $standard-color-blue;
           height: 25%;
           max-width: 100%;
-          
 
           body.dark & {
             color: white;
@@ -157,7 +156,7 @@
               font-size: 0.9rem;
               font-weight: 300;
             }
-            
+
             body.dark & {
               color: rgba(255, 255, 255, 0.795);
             }
@@ -196,10 +195,12 @@
               .product-rating {
                 min-width: 70px;
                 text-align: center;
-                font-size: 4rem;
+                font-size: 3.5rem;
+                font-family: $standard-font-Barlow;
                 // background-color: $standard-color-red;
-                background-color: $standard-color-blue-glass;
+                //background-color: $standard-color-blue-light;
                 border-radius: $standard-border-radius;
+                padding: 5%;
 
                 body.dark & {
                   color: white;
@@ -237,7 +238,6 @@
                 text-align: center;
                 padding: 2px 8px;
                 border-radius: 15px;
-                
 
                 body.dark & {
                   color: rgba(255, 255, 255, 0.795);
@@ -268,7 +268,7 @@
               font-size: 2.5rem;
               //background-color: aqua;
             }
-            
+
             body.dark & {
               color: rgba(255, 255, 255, 0.795);
             }
@@ -332,8 +332,9 @@
                 width: 240px;
                 height: 72px;
                 border-radius: 80px;
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-                  Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                  Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+                  "Helvetica Neue", sans-serif;
                 font-size: 20px;
                 text-align: center;
                 line-height: 70px;
@@ -409,13 +410,56 @@
 
   .text-related-product {
     font-family: $standard-font-Poiret-One;
-    background-color: $standard-color-blue;
+    //background-color: $standard-color-blue;
     color: white;
+    color: $standard-color-blue;
     width: 100%;
     height: auto;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //border-bottom: 1px solid $standard-color-blue-glass-mask;
+    //border-top: 1px solid $standard-color-blue-glass-mask;
     // padding: ;
   }
 
+  // .section-description {
+  //   width: 100%;
+  //   height: 300px;
+
+  //   //background-color: forestgreen;
+  //   .detail-detail {
+  //     display: flex;
+  //     justify-content: space-around;
+  //     width: 100%;
+  //     height: 100%;
+  //     background-color: $standard-color-blue-light;
+  //     border-radius: $standard-border-radius;
+
+  //     .detail_product-name {
+  //       width: 100%;
+  //       text-overflow: ellipsis;
+  //       white-space: nowrap;
+  //       overflow: hidden;
+  //     }
+
+  //     .releated-images {
+  //       width: 15%;
+  //       height: 60%;
+  //       border-radius: $standard-border-radius;
+  //       font-size: 15px;
+
+  //       img {
+  //         border-radius: $standard-border-radius;
+  //         width: 100%;
+  //         height: 100%;
+  //         cursor: pointer;
+  //       }
+  //     }
+  //   }
+  // }
+  //===================================== DANNY
   .section-description {
     height: 150px;
     width: 100%;
@@ -474,12 +518,10 @@
           bottom: 0%;
           transition: all 0.6s cubic-bezier(0.785, 0.135, 0.15, 0.86);
         }
-
       }
     }
   }
 }
-
 
 .comments-section {
   //background-color: blue;
@@ -500,13 +542,18 @@
       flex-direction: column;
 
       .fb-comments-Title {
-        background-color: $standard-color-blue;
+        // background-color: $standard-color-blue-glass-mask;
         font-family: "Poiret One", cursive;
         width: 100%;
-      
-        p{
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
           margin: 0;
           color: white;
+          color: $standard-color-blue;
         }
       }
 
@@ -515,98 +562,173 @@
         justify-content: center;
         padding-top: 20px;
         padding-bottom: 20px;
-        //background-color: blue;
         width: 100%;
-        
+        align-items: center;
+        //background-color: blue;
+
         .foro-comments-form {
           display: flex;
           width: 100%;
           flex-direction: row;
-          justify-content: space-around;
+          justify-content: center;
+          gap: 5%;
+          //background-color: red;
 
           .foro-comments-stars {
             //background-color: red;
-            
-            width: 250px;
-            
+            background-color: $standard-color-blue-light;
+            width: 400px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
           }
 
           .foro-comments-bars {
             display: flex;
-
+            background-color: $standard-color-blue-light;
+            align-items: center;
+            justify-content: center;
+            width: 400px;
+            border-radius: $standard-border-radius;
+            //background-color: aqua;
             .foro-comments-bars-container-text {
               display: flex;
               flex-direction: column;
 
               p {
+                font-family: $standard-font-Barlow;
                 font-size: 15.7px;
+                //color: $standard-color-blue;
+                font-weight: 500;
+                margin: 5px;
               }
             }
-            
+
             .foro-comments-bars-container-bars {
               display: flex;
+              width: auto;
+              //height: auto;
+              //background-color: blueviolet;
               flex-direction: column;
+              position: relative;
+              margin: 7px;
 
-              .foro-comments-excelent {
-                margin: 7px;
-                width: 230px;
-                height: 5px;
-                background-color: green;
-              }
+              .foro-comments-back {
+                margin: 11px 5px;
+                width: 250px;
+                height: 7px;
+                background-color: $standard-color-gray;
+                position: relative;
+                z-index: -1;
+                border-radius: $standard-border-radius;
+                &:hover {
+                  .foro-comments-excelent {
+                    width: 95%;
+                    transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+                  }
+                }
 
-              .foro-comments-Good {
-                margin: 7px;
-                width: 150px;
-                height: 5px;
-                background-color: rgb(42, 230, 42);
-              }
+                .foro-comments-excelent {
+                  position: absolute;
+                  //margin: 7px;
+                  width: 95%;
+                  height: 100%;
+                  background-color: green;
+                  border-radius: $standard-border-radius;
+                  transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+                }
+                .foro-comments-Good {
+                  position: absolute;
+                  //margin: 7px;
+                  width: 78%;
 
-              .foro-comments-Average {
-                margin: 7px;
-                width: 55px;
-                height: 5px;
-                background-color: yellow;
-              }
+                  height: 100%;
+                  background-color: rgb(42, 230, 42);
+                  border-radius: $standard-border-radius;
+                }
+                .foro-comments-Average {
+                  position: absolute;
+                  // margin: 7px;
+                  width: 55%;
 
-              .foro-comments-BelowAverage {
-                margin: 7px;
-                width: 30px;
-                height: 5px;
-                background-color: orange;
-              }
+                  height: 100%;
+                  background-color: yellow;
+                  border-radius: $standard-border-radius;
+                }
 
-              .foro-comments-Poor {
-                margin: 7px;
-                width: 20px;
-                height: 5px;
-                background-color: rgb(255, 60, 0);
+                .foro-comments-BelowAverage {
+                  //margin: 7px;
+                  position: absolute;
+                  width: 30%;
+
+                  height: 100%;
+                  background-color: orange;
+                  border-radius: $standard-border-radius;
+                }
+                .foro-comments-Poor {
+                  position: absolute;
+                  //margin: 7px;
+                  width: 5%;
+                  height: 100%;
+                  border-radius: $standard-border-radius;
+                  background-color: $standard-color-red;
+                }
               }
             }
+          }
+
+          .XXD {
+            //background-color: red;
+            font-family: $standard-font-Poiret-One;
           }
 
           .foro-comments-buttonSide {
             display: flex;
             //background-color: blue;
             width: 100%;
+            height: 50px;
             margin-top: 15px;
-  
+            justify-content: center;
+            align-items: center;
+            gap: 5%;
+
             .Rating-button-Submit {
-              padding-top: 10px;
-              padding: 4px 35px;
-              border-radius: 5px;
+              // padding-top: 10px;
+              // padding: 4px 10px;
+              // //width: 100%;
+              // border-radius: 5px;
+              // background-color: $standard-color-blue;
+              // background-color: red;
+              // color: white;
+              // border: none;
+              // font-size: 20px;
+              // cursor: pointer;
+              // font-family: "Poiret One", cursive;
+              // //margin-right: 10px;
+              width: 40%;
+              height: 100%;
               background-color: $standard-color-blue;
-              color: white;
-              border: none;
-              font-size: 20px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              font-family: $standard-font-Barlow;
+              text-decoration: none;
+              color: $standard-color-white;
+              font-size: 1.2rem;
+              font-weight: 400;
+              gap: 5px;
+              border-radius: $standard-border-radius;
+              transition: all 0.6s cubic-bezier(0.785, 0.135, 0.15, 0.86);
               cursor: pointer;
-              font-family: "Poiret One", cursive;
-              margin-right: 10px;
+              &:hover {
+                background-color: $standard-color-blue-secundary;
+                transition: all 0.6s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+              }
             }
           }
         }
-
       }
-      
     }
   }
 }
