fix shared buttons

--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -128,7 +128,6 @@
           color: $standard-color-blue;
           height: 25%;
           max-width: 100%;
-          
 
           body.dark & {
             color: white;
@@ -157,7 +156,7 @@
               font-size: 0.9rem;
               font-weight: 300;
             }
-            
+
             body.dark & {
               color: rgba(255, 255, 255, 0.795);
             }
@@ -237,7 +236,6 @@
                 text-align: center;
                 padding: 2px 8px;
                 border-radius: 15px;
-                
 
                 body.dark & {
                   color: rgba(255, 255, 255, 0.795);
@@ -268,7 +266,7 @@
               font-size: 2.5rem;
               //background-color: aqua;
             }
-            
+
             body.dark & {
               color: rgba(255, 255, 255, 0.795);
             }
@@ -300,6 +298,10 @@
               will-change: transform;
               -webkit-transition: all 0.2s ease-in-out;
               transition: all 0.2s ease-in-out;
+
+              body.dark & {
+                background-color: $standard-color-blue-light;
+              }
 
               &:hover {
                 /* transition-delay: .4s; */
@@ -474,12 +476,10 @@
           bottom: 0%;
           transition: all 0.6s cubic-bezier(0.785, 0.135, 0.15, 0.86);
         }
-
       }
     }
   }
 }
-
 
 .comments-section {
   //background-color: blue;
@@ -501,10 +501,10 @@
 
       .fb-comments-Title {
         background-color: $standard-color-blue;
-        font-family: "Poiret One", cursive;
+        font-family: 'Poiret One', cursive;
         width: 100%;
-      
-        p{
+
+        p {
           margin: 0;
           color: white;
         }
@@ -517,7 +517,7 @@
         padding-bottom: 20px;
         //background-color: blue;
         width: 100%;
-        
+
         .foro-comments-form {
           display: flex;
           width: 100%;
@@ -526,9 +526,8 @@
 
           .foro-comments-stars {
             //background-color: red;
-            
+
             width: 250px;
-            
           }
 
           .foro-comments-bars {
@@ -542,7 +541,7 @@
                 font-size: 15.7px;
               }
             }
-            
+
             .foro-comments-bars-container-bars {
               display: flex;
               flex-direction: column;
@@ -589,7 +588,7 @@
             //background-color: blue;
             width: 100%;
             margin-top: 15px;
-  
+
             .Rating-button-Submit {
               padding-top: 10px;
               padding: 4px 35px;
@@ -599,14 +598,12 @@
               border: none;
               font-size: 20px;
               cursor: pointer;
-              font-family: "Poiret One", cursive;
+              font-family: 'Poiret One', cursive;
               margin-right: 10px;
             }
           }
         }
-
       }
-      
     }
   }
 }
