--- a/client/src/styles/components/news/_news.scss
+++ b/client/src/styles/components/news/_news.scss
@@ -1,19 +1,23 @@
 .news_container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100%;
   background-color: whitesmoke;
-  min-height: 100vh;
+  // height: 100vh;
 
   body.dark & {
     background: $standard-color-black-ligth;
   }
 
+  h1 {
+    font-family: $standard-font-Poiret-One;
+    font-size: 3rem;
+  }
+
   .news_firstLine {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 400px);
+    grid-template-columns: repeat(2, 600px);
     justify-content: center;
     align-items: center;
 
@@ -22,7 +26,7 @@
     width: 100%;
     height: auto;
     box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.2);
-    gap: 40px;
+    gap: 20px;
 
     @media (max-width: 400px) {
       grid-template-columns: repeat(auto-fill, 100%);
@@ -30,7 +34,7 @@
 
     .news_cardRow {
       display: flex;
-      height: 200px;
+      height: 300px;
       align-items: center;
       justify-content: center;
 
@@ -62,7 +66,7 @@
         .news_content {
           position: absolute;
           width: 100%;
-          height: 60px;
+          height: 100px;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -80,12 +84,12 @@
 
           h1 {
             margin-left: 10px;
-            font-size: large;
+            font-size: 2rem;
             color: white;
             font-family: "Roboto", sans-serif;
           }
           p {
-            font-size: mediumS;
+            font-size: 1.5rem;
             margin-left: 10px;
             color: white;
             font-family: "Roboto", sans-serif;
@@ -144,7 +148,7 @@
 .news_paginated {
   display: flex;
   justify-content: center;
-  margin: 10px;
+  // margin: 10px;
   align-items: center;
 }
 
