--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -3,25 +3,18 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  max-width: calc(100vw - 50px);
-
-  @media (max-width: 600px) {
-    max-width: 100vw;
-  }
-  
-  #main-content{
-    max-width: 100vw;
-  }
+  margin-top: 30px;
+  margin-bottom: 30px;
 
   .dashboardAdmin_wrapper {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     gap: 40px;
     width: 96%;
     padding: 30px;
+    // margin-top: 15px;
     margin-bottom: 30px;
     border: 1px solid lightgray;
     border-radius: 10px;
@@ -29,11 +22,13 @@
 
 
     .dashboardAdmin_card {
+      // border: 1px solid red;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       gap: 10px;
+
       height: 140px;
       width: 250px;
       border-radius: 10px;
@@ -47,6 +42,8 @@
         align-items: center;
         justify-content: center;
       }
+      
+      
 
       .dashboardAdmin_icon {
         height: 70px;
@@ -54,26 +51,32 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        // border: 1px solid blue;
       }
 
       h2 {
+        // border: 1px solid green;
         font-size: 24px;
+        // margin-top: 20px;
+        color: rgb(0, 0, 0);
       }
 
       p {
+        // border: 1px solid orange;
         font-size: 24px;
         font-weight: bold;
         color: #00c91b;
       }
     }
   }
-
   .main_graphics{
-    width: 100%;
-    min-height: 100vh;
+    display: grid;
+    // grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-template-rows: 1fr 1fr;
+    width: 96%;
     
     .PieChart, .ComposedChart, .AreaChart{
-      height: 100vh;
       padding: 9px;
       border: 1px solid lightgray;
       border-radius: 10px;
@@ -83,10 +86,19 @@
 
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      // justify-content: space-around;
       align-items: center;
     }
-  
+
+    .primerDiv{
+      display:grid;
+      grid-template-columns: 1fr 3fr;
+      grid-gap: 15px;
+    }
+
+    .segundoDiv{
+      grid-template-rows: 1fr;
+    }
   }
   
 }
