--- a/client/src/styles/components/FilterPanel/_filterPanel2.scss
+++ b/client/src/styles/components/FilterPanel/_filterPanel2.scss
@@ -8,20 +8,21 @@
   font-family: $standard-font-Poiret-One;
   font-family: $standard-font-Barlow;
   font-size: 1rem;
-  height: calc(100vh - $navbar-height - $footer-height - $navbar-height-maring-top - $navbar-height-maring-button);
+  height: calc(
+    100vh - $navbar-height - $footer-height - $navbar-height-maring-top -
+      $navbar-height-maring-button
+  );
   width: 60px;
   z-index: 1;
-  border-radius: 0px 10px 10px 0px;
   background-color: $standard-color-blue;
-  // transition: all 0.3s cubic-bezier(0.785, 0.635, 0.15, 0.3);
-  transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86); 
+  transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  border-radius: 0px 10px 10px 0px;
   display: flex;
   flex-direction: column;
 
   .block-filter {
     display: none;
   }
-//   gap: 20px;
 
   hr {
     height: 1px;
@@ -36,10 +37,14 @@
     font-size: 0.5rem;
   }
 
-  &:hover {
+  @media (max-width: 768px) {
+    border-radius: 10px 10px 10px 10px;
     border-right: 0px solid $standard-color-blue;
     background-color: $standard-color-blue;
-    width: 300px;
+    width: 450px;
+
+    height: auto;
+    padding: 20px;
     transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
     .section-filter {
@@ -48,7 +53,24 @@
       }
     }
   }
+  @media (max-width: 450px) {
+    width: 380px;
+  }
 
+  @media (max-width: 320px) {
+    width: 100%;
+  }
+
+  &:hover {
+    @media (min-width: 769px) {
+      width: 300px;
+      .section-filter {
+        .block-filter {
+          display: flex;
+        }
+      }
+    }
+  }
 
   .section-filter {
     width: 100%;
@@ -60,21 +82,23 @@
     transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
     &:hover {
-      background-color: $standard-color-black-ligth;
-      transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+      @media (min-width: 769px) {
+        background-color: $standard-color-black-ligth;
+        transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
-      .hovr-selector {
-        width: 3px;
-        height: 80%;
-        background-color: $standard-color-blue-green;
-        transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-      }
-/////////////
-      .img {
-        scale: 1.05;
-        left: 1%;
-        bottom: 0%;
-        transition: all 0.3s cubic-bezier(0.1, 0.1, 0, 3);
+        .hovr-selector {
+          width: 3px;
+          height: 80%;
+          background-color: $standard-color-blue-green;
+          transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        }
+        /////////////
+        .img {
+          scale: 1.05;
+          left: 1%;
+          bottom: 0%;
+          transition: all 0.3s cubic-bezier(0.1, 0.1, 0, 3);
+        }
       }
     }
 
@@ -85,7 +109,7 @@
       background-color: $standard-color-transparent;
       transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
     }
-/////////////
+    /////////////
     .img {
       border-radius: 4px;
       position: relative;
@@ -100,7 +124,6 @@
 
     .block-filter {
       position: relative;
-      display: none;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -109,6 +132,11 @@
       height: 100%;
       width: 100%;
       gap: 15px;
+      display: flex;
+
+      @media (min-width: 769px) {
+        display: none;
+      }
 
       .title-filter {
         color: $standard-color-blue-green;
